# nyla

./: .bazelrc  .clang-format  .clang-tidy  .clangd  .editorconfig  .env  .envxephyr  .gitignore  .gitmodules  .ignore  BUILD  CLAUDE.md  CMakeLists.txt  CMakePresets.json  ITERATION.md  LICENSE  MODULE.bazel  SignedCommitTest  assets.h  build_shaders.sh  build_vulkan.sh  build_wm.sh  commands.txt  find-ns-includes.ps1  gencmake.ps1  generate_compile_commands.sh  git-am-nvim.ps1  git-format-nvim.ps1  install.sh  install_wm.sh  meson.build  pack.py  run_shipgame.sh  run_vulkan.sh  setup-env.sh  stb_image.h  test-git-commit-signing  vulkanlog
nyla/: CMakeLists.txt
nyla/alloc/: CMakeLists.txt  region_alloc.cc  region_alloc.h  region_alloc_test.cc
nyla/apps/: CMakeLists.txt
nyla/asset/: CMakeLists.txt  asset.h  asset_packer.cc
nyla/audio/: CMakeLists.txt  main.cc  wave.cc  wave.h
nyla/bar/: BUILD.bazel  bar.cc  bar.h
nyla/bar_manager/: bar_manager.cc  bar_manager.h
nyla/bazel/: pkg_config_dependency.bzl
nyla/client_manager/: BUILD.bazel  client.cc  client.h  client_manager.cc  client_manager.h  client_stack.h
nyla/commons/: BUILD.bazel  CMakeLists.txt  CMakeListsGenerated.txt  align.h  array.h  array_def.h  assert.h  asset_file.cc  asset_file.h  asset_file_format.h  asset_import.cc  asset_import.h  asset_manager.cc  asset_manager.h  audio.cc  audio.h  bdf.cc  bdf.h  binary_search.h  bitenum.h  bootstrap.cc  bootstrap.h  byteliterals.h  byteparser.cc  byteparser.h  cast.h  cell_renderer.cc  cell_renderer.h  charview.h  cleanup.h  clock.cc  clock.h  collections.h  color.cc  color.h  complex.h  concepts.h  cstr.h  debug_text_renderer.cc  debug_text_renderer.h  (+164 more)
nyla/dbus/: BUILD.bazel  CMakeLists.txt  dbus.cc  dbus.h
nyla/debugfs/: BUILD.bazel  CMakeLists.txt  debugfs.cc  debugfs.h
nyla/engine/: CMakeLists.txt  asset_manager.cc  asset_manager.h  debug_text_renderer.cc  debug_text_renderer.h  engine.cc  engine.h  engine0_internal.cc  engine0_internal.h  frame_arena.cc  frame_arena.h  glyph_renderer.cc  glyph_renderer.h  gpu_buffer_region_alloc.cc  gpu_buffer_region_alloc.h  gpu_upload_manager.cc  gpu_upload_manager.h  input_manager.cc  input_manager.h  render_targets.cc  render_targets.h  renderer.cc  renderer.h  renderer2d.cc  renderer2d.h  staging.cc  staging.h  staging_buffer.cc  staging_buffer.h  tween_manager.cc  tween_manager.h
nyla/engine0/: CMakeLists.txt  asset_manager.cc  dbg_text_renderer.cc  debug_text_renderer.cc  debug_text_renderer.h  e0basic_renderer.cc  e0basic_renderer.h  engine0.cc  engine0.h  engine0_internal.cc  engine0_internal.h  frame_arena.cc  gpu_resources.cc  gpu_resources.h  gui.cc  gui.h  render_pipeline.cc  render_pipeline.h  renderer2d.cc  renderer2d.h  shader_manager.cc  shader_manager.h  staging.cc  staging_buffer.cc  staging_buffer.h  tweenmanager.cc  tweenmanager.h
nyla/formats/: CMakeLists.txt
nyla/fs/: BUILD.bazel  nylafs.cc  nylafs.h
nyla/fwk/: BUILD.bazel  CMakeLists.txt  dbg_text_renderer.cc  dbg_text_renderer.h  gui.cc  gui.h  input.cc  input.h  render_pipeline.cc  render_pipeline.h  staging.cc  staging.h  vk_mem.cc  vulk_mem.cc  vulk_mem.h
nyla/json/: CMakeLists.txt  json_parser.cc  json_parser.h  json_parser_test.cc
nyla/keyboard/: BUILD.bazel  keyboard.cc  keyboard.h
nyla/layout/: BUILD.bazel  layout.cc  layout.h  layout_test.cc  rect.cc  rect.h
nyla/managers/: BUILD.bazel  bar.cc  bar_manager.cc  bar_manager.h  client_manager.cc  client_manager.h  focus_manager.h  keyboard.cc
nyla/math/: BUILD.bazel  mat4.h  quat.h  vec3.h
nyla/platform/: BUILD.bazel  CMakeLists.txt  abstract_input.cc  abstract_input.h  key_physical.h  platform.cc  platform.h  platform_audio.h  platform_dir_watch.h  platform_gamepad.h  platform_key_resolver.h  platform_x11.cc  platform_x11.h  platformold.h
nyla/protocols/: BUILD.bazel  atoms.cc  atoms.h  client_message.cc  client_message.h  properties.cc  properties.h  protocols.cc  protocols.h  send.cc  send.h  wm_hints.cc  wm_hints.h  wm_protocols.cc  wm_protocols.h
nyla/rect/: BUILD.bazel  rect.cc  rect.h
nyla/rhi/: BUILD.bazel  CMakeLists.txt  handle_pool.h  renderdoc.cc  renderdoc.h  rhi.h  rhi_bind_groups.h  rhi_buffer.h  rhi_cmdlist.h  rhi_descriptor.h  rhi_handle.h  rhi_handle_pool.h  rhi_pass.h  rhi_pipeline.cc  rhi_pipeline.h  rhi_sampler.h  rhi_shader.h  rhi_texture.h  rhi_vulkan.cc  rhi_vulkan.h  rhi_vulkan_enum.cc
nyla/shaders/: cell_renderer.ps.hlsl  cell_renderer.vs.hlsl  debug_text_renderer.ps.hlsl  fullscreen.vs.hlsl  renderer.ps.hlsl  renderer.vs.hlsl  renderer2d.ps.hlsl  renderer2d.vs.hlsl
nyla/shipgame/: BUILD.bazel  bump_aloc.cc  bump_aloc.h  circle.cc  circle.h  common.h  debug.cc  debug.h  debug_line.cc  debug_line.h  debug_text_renderer.cc  debug_text_renderer.h  entity_renderer.cc  entity_renderer.h  game.cc  game.h  game_renderer.h  game_renderer2.cc  game_renderer2.h  gamecommon.h  grid_renderer.cc  grid_renderer.h  grid_renderer2.cc  grid_renderer2.h  main.cc  profiling.h  render.cc  render.h  renderer.cc  renderer.h  simple_graphics_pipeline.cc  simple_graphics_pipeline.h  text_renderer.cc  text_renderer.h  text_renderer2.cc  text_renderer2.h  world_renderer.cc  world_renderer.h
nyla/spawn/: BUILD.bazel  spawn.h
nyla/spirview/: CMakeLists.txt  main.cc  spirview.cc  spirview.h
nyla/timer/: BUILD.bazel  timer.cc  timer.h
nyla/tools/: BUILD.bazel  psf2_glsl.cc
nyla/uid/: BUILD.bazel  uid.cc  uid.h
nyla/vulkan/: BUILD.bazel  dbg_text_renderer.cc  dbg_text_renderer.h  math.h  memory.cc  memory.h  pipeline.h  render_pipeline.cc  render_pipeline.h  renderdoc.cc  renderdoc_app.h  simple_graphics_pipeline.cc  simple_graphics_pipeline.h  swapchain.cc  swapchain.h  sync.h  vkresult.cc  vkresult.h  vulkan.cc  vulkan.h
nyla/wm/: BUILD.bazel  bar_manager.cc  bar_manager.h  client.cc  client.h  client_manager.cc  client_manager.h  keyboard.cc  keyboard.h  layout.cc  main.cc  palette.h  protocols.cc  protocols.h  screen_saver_inhibitor.cc  screen_saver_inhibitor.h  utils.cc  (+4 more)
screen_inhibitor/: CMakeLists.txt  CMakeListsGenerated.txt  screen_inhibitor.cc
(+412 files in other folders)
