bazel_dep(name = "rules_cc", version = "0.2.8")
bazel_dep(name = "abseil-cpp", version = "20250814.1")
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "libfuse", version = "3.16.2")

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "d107d9c9025915902fd52346f1c6e18d87f7013a",
    remote = "https://github.com/izashchelkin/bazel-compile-commands-extractor.git",
)
