load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "debugfs",
    srcs = glob([
        "*.cc",
    ]),
    hdrs = glob(["*.h"]),
    defines = [
        "FUSE_USE_VERSION=316",
    ],
    deps = [
        "//nyla/commons",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/log:initialize",
        "@abseil-cpp//absl/log:log",
        "@libfuse",
    ],
)
