load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "fwk",
    srcs = glob([
        "*.cc",
    ]),
    hdrs = glob([
        "*.h",
    ]),
    deps = [
        "//nyla/platform",
        "//nyla/vulkan",
    ],
)

cc_library(
    name = "fwk_nvkdbg",
    srcs = glob([
        "*.cc",
    ]),
    hdrs = glob([
        "*.h",
    ]),
    deps = [
        "//nyla/platform",
        "//nyla/vulkan:vulkan_nvkdbg",
    ],
)