load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "layout",
    srcs = glob(["*.cc"]),
    hdrs = glob(["*.h"]),
    deps = [
        "//nyla/commons",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/strings",
    ],
)
