load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "platform",
    srcs = glob(["**/*.cc"]),
    hdrs = glob(["**/*.h"]),
    deps = [
        "//nyla/commons",
    ],
    linkopts = [
        "-lxcb",
        "-lxcb-util",
        "-lxcb-xkb",
        "-lxkbcommon",
        "-lxkbcommon-x11",
        "-lxcb-xinput",
    ],
)