load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "rhi",
    srcs = glob([
        "**/*.cc",
    ]),
    hdrs = glob([
        "**/*.h",
    ]),
    linkopts = [
        "-lvulkan",
    ],
    deps = [
        "//nyla/commons",
        "//nyla/platform",
        "//third_party/vulkansdk",
    ],
)

cc_library(
    name = "rhi_ndbg",
    srcs = glob([
        "**/*.cc",
    ]),
    hdrs = glob([
        "**/*.h",
    ]),
    local_defines = ["NDEBUG"],
    linkopts = [
        "-lvulkan",
    ],
    deps = [
        "//nyla/commons",
        "//nyla/platform",
        "//third_party/vulkansdk",
    ],
)