load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_binary(
    name = "vulkan",
    srcs = glob([
        "*.cc",
        "*.h",
    ]),
    deps = [
        "//third_party/vulkansdk",
        "//nyla/math",
        "//nyla/x11",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/log:initialize",
        "@abseil-cpp//absl/container:flat_hash_set",
        # "@rules_cc//cc/runfiles",
    ],
)
