load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "vulkan",
    srcs = glob([
        "*.cc",
    ]),
    hdrs = glob([
        "*.h",
    ]),
    linkopts = [
        "-lvulkan",
    ],
    deps = [
        "//nyla/commons",
        "//third_party/vulkansdk",
    ],
)

cc_library(
    name = "vulkan_nvkdbg",
    srcs = glob([
        "*.cc",
    ]),
    hdrs = glob([
        "*.h",
    ]),
    local_defines = ["NYLA_VULKAN_NDEBUG"],
    linkopts = [
        "-lvulkan",
    ],
    deps = [
        "//nyla/commons",
        "//third_party/vulkansdk",
    ],
)