load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_binary(
    name = "wm",
    srcs = glob(
        [
            "*.cc",
            "*.h",
        ],
    ),
    linkopts = [
        "-lxcb-screensaver",
    ],
    deps = [
        "//nyla/commons",
        "//nyla/dbus",
        "//nyla/fs",
        "//nyla/layout",
        "//nyla/x11",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/log:initialize",
    ],
)